# GeoBase

./: .gitattributes  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCIES.md  LICENSE  MANIFEST.md  PLAN_1.0.md  README.md  THIRD_PARTY_LICENSES.md  THIRD_PARTY_NOTICES.md  governance-config.yaml  package.json  place.example.toml  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/commands/: pickup.md  trueup.md
.github/workflows/: acquire-gate.yml  ci.yml  geopack-gate.yml  license-audit.yml  pages.yml  render-gate.yml
crates/geobase-core/: Cargo.toml
crates/geobase-core/src/: baseline.rs  crs.rs  lib.rs
crates/geobase-core/tests/fixtures/: geobase-baseline.json
crates/geobase-engine-desktop/: Cargo.toml  build.rs  tauri.conf.json
crates/geobase-engine-desktop/examples/: node.rs  record-consent.rs  verify-export-audit.rs
crates/geobase-engine-desktop/src/: export.rs  lib.rs  place.rs  server.rs  session.rs  vault.rs
crates/geobase-gpkg/: Cargo.toml
crates/geobase-gpkg/src/: ceremony.rs  cipher.rs  consent.rs  consent_gate.rs  consent_store.rs  lib.rs  raster.rs  vector.rs
crates/geobase-ingestor/: Cargo.toml
crates/geobase-ingestor/src/: crs_id.rs  geotiff.rs  lib.rs  package.rs  shp.rs  shp_write.rs
crates/geobase-tsdf/: Cargo.toml
crates/geobase-tsdf/src/: lib.rs
data/: README.md
data/fixtures/geopack/: capacity_small.dbf  capacity_small.shp  capacity_small.shx  dem_small.tif  flood_pkg.toml  flood_small.dbf  flood_small.shp  flood_small.shx  landcover_pkg.toml  landcover_small.dbf  landcover_small.shp  landcover_small.shx  nogo_small.dbf  nogo_small.shp  nogo_small.shx  parcels_small.dbf  parcels_small.shp  parcels_small.shx  pkg-capacity.toml  pkg-nogo.toml
docs/: ARCHITECTURE.md  CEREMONY-DESIGN-PROPOSAL.md  CEREMONY-DESIGN.md  CEREMONY-GATE.md  CRS-PIPELINE.md  DECISIONS.md  GEOBASE-BUILD-DIRECTIVE.md  GEOBASE-DIGITAL-TWIN-FEATURES.md  LESSONS-FROM-PROTOTYPE.md  PROCESS-MAP.md  RELEASE-DEFINITION.md  ROADMAP.md  ROADMAP.yaml  THREAT-MODEL-1.2.md  TSDF-INTEGRATION.md  TSDF-VERSION-BUMP-FLOW.md
docs/data-sharing-agreements/: .gitignore  AGENTS.md  COLLECTION-CHARTER.md  LANES.md  PLAN.md  README.md  lanes.json  lanes.schema.json  pnw-data-sovereignty-research.md
docs/data-sharing-agreements/.lane-tmp/: nwic-fetch.headers  nwic-robots.body  nwic-robots.headers  quileute-fetch.headers  quileute-robots.body  quileute-robots.headers
docs/data-sharing-agreements/catalog/: catalog.ds3-a.jsonl  catalog.ds3-b.jsonl  catalog.ds3-c.jsonl  catalog.ds3-d.jsonl  catalog.ds3-e.jsonl  catalog.jsonl  catalog.schema.json
docs/data-sharing-agreements/corpus/: MANIFEST.ds2-baseline.jsonl  MANIFEST.ds2-id.jsonl  MANIFEST.ds2-or.jsonl  MANIFEST.ds2-round2.jsonl  MANIFEST.ds2-round3.jsonl  MANIFEST.ds2-wa-coastal.jsonl  MANIFEST.ds2-wa-inland.jsonl  MANIFEST.jsonl  README.md  manifest.schema.json
docs/data-sharing-agreements/guidelines/: GEOBASE-ADHERENCE-MAP.md  RATIFICATION-LEDGER.md  RSTEP-DATA-SOVEREIGNTY-GUIDELINES.md
docs/data-sharing-agreements/prompts/: _ds4-a-docs.txt  _ds4-b-docs.txt  claude-alignment.md  claude-audit.md  codex-ds1-discovery.md  codex-ds2-acquire.md  codex-ds3-catalog.md  codex-ds4-summarize.md  ds2-round3-corrective.md  ds2-round3-fetch.md  ds2-round3-resume.md  ds2-wave-a-probe.md  ds2-wave-b-fetch.md  ds3-d-corrective.md  ds3-d-dispatch.md  ds3-e-dispatch.md  ds4-a-dispatch.md  ds4-b-dispatch.md
docs/data-sharing-agreements/provenance/: access-log.baseline.jsonl  access-log.director.jsonl  access-log.ds2-baseline.jsonl  access-log.ds2-id.jsonl  access-log.ds2-institutional.jsonl  access-log.ds2-or.jsonl  access-log.ds2-round2.jsonl  access-log.ds2-round3.jsonl  access-log.ds2-wa-coastal.jsonl  access-log.ds2-wa-inland.jsonl  access-log.ds3-a.jsonl  access-log.ds3-b.jsonl  access-log.ds3-c.jsonl  access-log.ds3-d.jsonl  access-log.ds3-e.jsonl  access-log.ds4-a.jsonl  access-log.ds4-b.jsonl  access-log.id.jsonl  access-log.institutional.jsonl  access-log.jsonl  access-log.or.jsonl  access-log.schema.json  access-log.wa-coastal.jsonl  access-log.wa-inland.jsonl
docs/data-sharing-agreements/sources/: NATIONS.md  SEED-SOURCES.md  atni-roster-status.json  baseline-inventory.jsonl  baseline-inventory.md  baseline-inventory.schema.json  coverage-matrix.jsonl  coverage-matrix.md  coverage.schema.json  nations.json  register.baseline.jsonl  register.director.jsonl  register.ds2-baseline.jsonl  register.ds2-id.jsonl  register.ds2-round3.jsonl  register.ds2-wa-coastal.jsonl  register.ds2-wa-inland.jsonl  register.id.jsonl  register.institutional.jsonl  register.jsonl  register.or.jsonl  register.schema.json  register.wa-coastal.jsonl  register.wa-inland.jsonl
docs/data-sharing-agreements/summaries/: archives-and-collections.md  archives-records-colville.md  bl-001.md  bl-003.md  bl-022.md  bl-023.md  bl-028.md  bl-029.md  bl-030.md  bl-032.md  bl-038.md  burns-paiute-tribal-code.md  coeur-dalene-institutional-research-board.md  coeur-dalene-research-permit-application.md  colville-chapter-6-6-research-regulation.md  colville-research-permit-application.md  colville-research-regulation-ordinance-process.md  colville-resolution-1981-721.md  colville-resolution-1990-317.md  coquille-indigenous-determinants-health-ordinance.md  d2bl-001.md  (+43 more)
docs/interop/: DDM-BRIDGE.md
engine-light/: index.html  package.json  tsconfig.json  vite.config.ts
engine-light/scripts/: verify-layers.mjs  verify-render.mjs
engine-light/src/: layers.ts  main.ts  style.css
prompts/standing/: retrospective.md  review-diff.md  survey.md  triage.md
scripts/: codex-run.ps1  generate_terrain_tiles.py  geopack_gate.py  license_audit.py  make_geopack_fixtures.py  make_t0_baseline.py  oracle-requirements.txt  session-preflight.ps1  verify_geopack_oracle.py
solo/rstep/: index.html  package.json  tsconfig.json  vite.config.ts
solo/sdk/: package.json  tsconfig.json
spec/fidp/: README.md
spec/tsdf/: ATTRIBUTION.md  tiers.toml
tools/acquire/: README.md  __init__.py  __main__.py  client.py  fetchers.py  safety.py  sources.py
(+112 files in other folders)
