[package]
name = "geobase-engine-desktop"
description = "GeoBase Desktop Engine: the local federated node — catalog, secure GPKG vault, local tile server, TSDF enforcement."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
geobase-core.workspace = true
geobase-tsdf = { workspace = true }
geobase-gpkg.workspace = true
geobase-ingestor = { workspace = true }
thiserror = { workspace = true }
axum = "0.8.4"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "signal"] }
tower-http = { version = "0.7.0", features = ["fs"] }
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
geozero = { version = "0.14.0", default-features = false, features = ["with-wkb", "with-geojson"] }
sha2 = "0.10.9"
tauri = { version = "2", optional = true }

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }

[features]
# The Tauri desktop shell is feature-gated so `cargo build --workspace`
# stays lean everywhere (ubuntu CI needs no GTK/webkit packages); the shell
# builds explicitly with `--features shell`.
shell = ["dep:tauri"]

[[bin]]
name = "geobase-desktop"
required-features = ["shell"]

[build-dependencies]
tauri-build = "2"
