[package]
name = "geobase-gpkg"
description = "Secure GeoPackage handling for GeoBase: TSDF metadata tables, audit trail, T3 at-rest encryption."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
geobase-core = { workspace = true }
geobase-tsdf = { workspace = true }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { workspace = true }
serde_json.workspace = true
thiserror = { workspace = true }
tiff = "0.11.0"
# Validated UTC instants for the consent schema (B3). Already in the
# dependency tree transitively; pinned here as a direct, auditable dep.
time = { version = "0.3", features = ["parsing", "formatting"] }
# OS CSPRNG for unforgeable consent-store event ids (B3). Same pin as
# geobase-engine-desktop's export-token use.
getrandom = { version = "0.3", features = ["std"] }
