[package]
name = "geobase-ingestor"
description = "GeoPack — the GeoBase ingestor: packages files/documents/imagery/shapefiles/databases into TSDF-tagged secure GeoPackage bundles."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
geobase-core = { workspace = true }
geobase-tsdf = { workspace = true }
geobase-gpkg = { workspace = true }
thiserror = { workspace = true }
