[package]
name = "geobase-tsdf"
description = "Tiered Sovereign Data Framework — versioned, pluggable tier resolver for GeoBase."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
